--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
 
 
-	<!-- WEATHER INFO PANEL -->
+	<!-- ADDRESS INFO PANEL -->
 	<div class="container">
 		<div class="row text-center">
 			<div id="address-panel" class="col-12 col-sm-10 col-md-8">
@@ -50,19 +50,19 @@
 				</form>
 				<!-- END CITY SEARCH FORM -->
 
-				<!-- SUCCESSFUL WEATHER SEARCH ALERT -->
+				<!-- SUCCESSFUL ZIPCODE SEARCH ALERT -->
 				<div class="alert alert-light" role="alert">
 					<p id="alert-font">The Zipcode for Your Address is:</p>
 					<span id="zipcode"></span>
 				</div>
 
-				<!-- ERROR WEATHER SEARCH ALERT -->
+				<!-- ERROR ZIPCODE SEARCH ALERT -->
 				<div class="alert alert-danger" role="alert"></div>
 
 			</div>
 		</div>
 	</div>
-	<!-- END WEATHER INFO PANEL -->
+	<!-- END ADDRESS INFO PANEL -->
 
 
 <!-- JQUERY CDN -->
